--- a/packages/boat/package.json
+++ b/packages/boat/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.2",
+    "@material-tailwind/react": "^2.1.8",
     "@react-google-maps/api": "^2.19.2",
     "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/typography": "^0.5.10",
@@ -20,6 +21,7 @@
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
     "clsx": "^2.0.0",
+    "core-js-pure": "^3.35.0",
     "eslint": "8.53.0",
     "eslint-config-next": "14.0.1",
     "framer-motion": "^10.16.4",
@@ -28,6 +30,7 @@
     "next": "^14.0.1",
     "rc-pagination": "^3.7.0",
     "rc-rate": "^2.12.0",
+    "rc-slider": "^10.5.0",
     "rc-table": "^7.35.2",
     "react": "18.2.0",
     "react-avatar": "^5.0.3",
